update note for beaconcha.in stats to include LH

--- a/default.env
+++ b/default.env
@@ -44,7 +44,7 @@ TEKU_RAPID_SYNC=
 # or could just be a remote consensus client URL for Teku, Lighthouse or Prysm "validator only" setups. Not in use for Nimbus.
 CC_NODE=http://consensus:5052
 
-# Beaconcha.in API key for sending client stats from Prysm. Used with prysm-stats.yml
+# Beaconcha.in API key for sending client stats from Prysm or Lighthouse. Used with prysm-stats.yml or lh-stats*.yml
 # Specify as just the API key, and give the machine name separately
 BEACON_STATS_API=
 BEACON_STATS_MACHINE=
