--- a/teku-base-notz.yml
+++ b/teku-base-notz.yml
@@ -17,6 +17,10 @@ services:
     ports:
       - ${TEKU_PORT}:${TEKU_PORT}/tcp
       - ${TEKU_PORT}:${TEKU_PORT}/udp
+    networks:
+      default:
+        aliases:
+          - eth2
     entrypoint:
       - docker-entrypoint.sh
       - /opt/teku/bin/teku
