--- a/nm.yml
+++ b/nm.yml
@@ -18,6 +18,10 @@ services:
     expose:
       - ${EC_RPC_PORT}/tcp
       - ${EC_WS_PORT}/tcp
+    networks:
+      default:
+        aliases:
+          - eth1
     entrypoint:
       - docker-entrypoint.sh
       - dotnet
