Removed doppelganger for LH validator only

--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -15,7 +15,7 @@ services:
       - /var/lib/lighthouse
       - --beacon-nodes
       - ${CC_NODE}
-      - --enable-doppelganger-protection
+#      - --enable-doppelganger-protection
       - --graffiti
       - ${GRAFFITI}
       - --network
