Fixed lhstats with rapid sync

--- a/besu.yml
+++ b/besu.yml
@@ -51,8 +51,8 @@ services:
       - --network
       - ${EC_NETWORK}
       - --pruning-enabled
-# This is going to be the new hawtness but should only be used for testing right now,
-# it is not stable on mainnet. When using this, disable --pruning-enabled.
+# This is going to be the new hawtness but should only be used for testing right now.
+# When using this, disable --pruning-enabled.
 #     - --Xdata-storage-format=BONSAI
   eth:
     depends_on:
