Separated lh-stats also can rapid sync

--- a/lh-stats-consensus.yml
+++ b/lh-stats-consensus.yml
@@ -2,6 +2,4 @@
 version: "3.4"
 services:
   consensus:
-    command:
-      - --monitoring-endpoint
-      - https://beaconcha.in/api/v1/client/metrics?apikey=${BEACON_STATS_API}&machine=${BEACON_STATS_MACHINE}
+    command: --monitoring-endpoint=https://beaconcha.in/api/v1/client/metrics?apikey=${BEACON_STATS_API}&machine=${BEACON_STATS_MACHINE} ${LH_RAPID_SYNC}
