Lodestar fixes, new logging option

--- a/besu.yml
+++ b/besu.yml
@@ -1,4 +1,11 @@
 version: "3.4"
+x-logging: &logging
+  logging:
+    driver: json-file
+    options:
+      max-size: 10m
+      max-file: "3"
+
 services:
   execution:
     restart: "${RESTART}"
@@ -24,6 +31,7 @@ services:
       default:
         aliases:
           - eth1
+    <<: *logging
     entrypoint:
       - docker-entrypoint.sh
       - /opt/besu/bin/besu
