--- a/lh-base.yml
+++ b/lh-base.yml
@@ -1,4 +1,11 @@
 version: "3.4"
+x-logging: &logging
+  logging:
+    driver: json-file
+    options:
+      max-size: 10m
+      max-file: "3"
+
 services:
   consensus:
     restart: "${RESTART}"
@@ -23,6 +30,7 @@ services:
       default:
         aliases:
           - eth2
+    <<: *logging
     entrypoint:
       - docker-entrypoint.sh
       - lighthouse
@@ -52,6 +60,7 @@ services:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+    <<: *logging
     entrypoint:
       - docker-entrypoint.sh
       - lighthouse
