--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -1,4 +1,11 @@
 version: "3.4"
+x-logging: &logging
+  logging:
+    driver: json-file
+    options:
+      max-size: 10m
+      max-file: "3"
+
 x-build: &prysm-build
   context: ./prysm
   dockerfile: ${PRYSM_DOCKERFILE}
@@ -27,6 +34,7 @@ services:
       default:
         aliases:
           - eth2
+    <<: *logging
     entrypoint:
       - docker-entrypoint.sh
       - beacon-chain
@@ -64,6 +72,7 @@ services:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+    <<: *logging
     entrypoint:
       - docker-entrypoint.sh
       - validator
