--- a/teku-base-notz.yml
+++ b/teku-base-notz.yml
@@ -1,5 +1,12 @@
 # Version without timezone, for use with Amazon Linux 2 and similar
 version: "3.4"
+x-logging: &logging
+  logging:
+    driver: json-file
+    options:
+      max-size: 10m
+      max-file: "3"
+
 services:
   consensus:
     restart: "${RESTART}"
@@ -22,6 +29,7 @@ services:
       default:
         aliases:
           - eth2
+    <<: *logging
     entrypoint:
       - docker-entrypoint.sh
       - /opt/teku/bin/teku
