--- a/traefik-aws.yml
+++ b/traefik-aws.yml
@@ -1,4 +1,11 @@
 version: "3.4"
+x-logging: &logging
+  logging:
+    driver: json-file
+    options:
+      max-size: 10m
+      max-file: "3"
+
 services:
   traefik:
     image: traefik-aws
@@ -34,6 +41,7 @@ services:
       - ~/.aws:/root/.aws:ro
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+    <<: *logging
   eth:
     depends_on:
       - traefik
