--- a/lh-grafana.yml
+++ b/lh-grafana.yml
@@ -1,4 +1,11 @@
 version: "3.4"
+x-logging: &logging
+  logging:
+    driver: json-file
+    options:
+      max-size: 10m
+      max-file: "3"
+
 services:
   consensus:
     expose:
@@ -31,6 +38,7 @@ services:
       - 9090/tcp
     entrypoint: choose-config.sh
     command: ["/bin/prometheus", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles"]
+    <<: *logging
     depends_on:
       - consensus
       - validator
@@ -55,6 +63,7 @@ services:
       - /etc/timezone:/etc/TZ:ro
     expose:
       - 9100/tcp
+    <<: *logging
   grafana:
     restart: "${RESTART}"
     build:
@@ -70,6 +79,7 @@ services:
       - prometheus
     expose:
       - ${GRAFANA_PORT}/tcp
+    <<: *logging
     labels:
       - traefik.enable=true
       - traefik.http.routers.grafana.entrypoints=web,websecure
