--- a/lh-validator-notz.yml
+++ b/lh-validator-notz.yml
@@ -1,11 +1,19 @@
 # Version without timezone, for use with Amazon Linux 2 and similar
 version: "3.4"
+x-logging: &logging
+  logging:
+    driver: json-file
+    options:
+      max-size: 10m
+      max-file: "3"
+
 services:
   validator:
     restart: "${RESTART}"
     image: lighthouse:local
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
+    <<: *logging
     entrypoint:
       - docker-entrypoint.sh
       - lighthouse
