--- a/lodestar/Dockerfile.source
+++ b/lodestar/Dockerfile.source
@@ -1,4 +1,4 @@
-FROM node:16-alpine as build
+FROM node:14-alpine as build
 
 # Here only to avoid build-time errors
 ARG DOCKER_TAG
@@ -10,15 +10,14 @@ RUN ln -s /usr/bin/python3 /usr/bin/python
 
 WORKDIR /usr/app
 
-RUN bash -c "git clone https://github.com/ChainSafe/lodestar.git && cd lodestar && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && yarn install --non-interactive --frozen-lockfile && node ./scripts/getGitData /usr/app/lodestar/.git-data.json && rm -r .git"
+RUN bash -c "git clone https://github.com/ChainSafe/lodestar.git && cd lodestar && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && yarn install --non-interactive --frozen-lockfile && yarn build && cd packages && npm install && npm install ./cli"
 
-FROM node:16-alpine
+FROM node:14-alpine
 
 RUN apk update && apk add --no-cache ca-certificates tzdata bash su-exec && rm -rf /var/cache/apk/*
 
 WORKDIR /usr/app
-COPY --from=build /usr/app/lodestar .
-ENV DOCKER_LODESTAR_GIT_DATA_FILEPATH /usr/app/.git-data.json
+COPY --from=build /usr/app/lodestar/ .
 
 # Scripts that handle permissions
 COPY ./validator-import.sh /usr/local/bin/
@@ -54,4 +53,4 @@ RUN adduser \
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/lodestar/validators && chown ${USER}:${USER} /var/lib/lodestar/validators && chmod 700 /var/lib/lodestar/validators
 
-ENTRYPOINT ["node", "--max-old-space-size=8192", "/usr/app/packages/cli/bin/lodestar"]
+ENTRYPOINT ["node", "--max-old-space-size=6144", "/usr/app/node_modules/.bin/lodestar"]
