Teku validator auto flag

--- a/teku-validator.yml
+++ b/teku-validator.yml
@@ -28,7 +28,7 @@ services:
       - --beacon-node-api-endpoint=${CC_NODE}
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
-      - --network=${NETWORK}
+      - --network=auto
       - --validators-keystore-locking-enabled=true
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
       - --validators-graffiti=${GRAFFITI}
