--- a/geth/Dockerfile.source
+++ b/geth/Dockerfile.source
@@ -17,7 +17,7 @@ FROM alpine:latest
 ARG USER=geth
 ARG UID=10001
 
-RUN apk add --no-cache ca-certificates su-exec bash tzdata
+RUN apk add --no-cache ca-certificates tzdata
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -32,6 +32,6 @@ RUN mkdir -p /var/lib/goethereum && chown ${USER}:${USER} /var/lib/goethereum
 # Copy executable
 COPY --from=builder /src/go-ethereum/build/bin/geth /usr/local/bin/
 
-COPY ./docker-entrypoint.sh /usr/local/bin/
+USER ${USER}
 
-ENTRYPOINT ["docker-entrypoint.sh","geth"]
+ENTRYPOINT ["geth"]
