--- a/lh-base.yml
+++ b/lh-base.yml
@@ -16,6 +16,7 @@ services:
         - BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - DOCKER_TAG=${LH_DOCKER_TAG}
     image: lighthouse:local
+    user: lhconsensus
     stop_grace_period: 1m
     volumes:
       - lhbeacon-data:/var/lib/lighthouse
@@ -32,7 +33,6 @@ services:
           - eth2
     <<: *logging
     entrypoint:
-      - docker-entrypoint.sh
       - lighthouse
       - bn
       - --disable-upnp
@@ -56,13 +56,13 @@ services:
   validator:
     restart: "${RESTART}"
     image: lighthouse:local
+    user: lhvalidator
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
     entrypoint:
-      - docker-entrypoint.sh
       - lighthouse
       - vc
       - --datadir
@@ -80,6 +80,7 @@ services:
   validator-import:
     restart: "no"
     image: lighthouse:local
+    user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
@@ -101,6 +102,7 @@ services:
   validator-exit:
     restart: "no"
     image: lighthouse:local
+    user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
