--- a/lh-validator-notz.yml
+++ b/lh-validator-notz.yml
@@ -11,11 +11,11 @@ services:
   validator:
     restart: "${RESTART}"
     image: lighthouse:local
+    user: lhvalidator
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
     <<: *logging
     entrypoint:
-      - docker-entrypoint.sh
       - lighthouse
       - vc
       - --datadir
@@ -31,6 +31,7 @@ services:
   validator-import:
     restart: "no"
     image: lighthouse:local
+    user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
@@ -50,6 +51,7 @@ services:
   validator-exit:
     restart: "no"
     image: lighthouse:local
+    user: root
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
