--- a/teku-consensus.yml
+++ b/teku-consensus.yml
@@ -16,7 +16,7 @@ services:
         - DOCKER_TAG=${TEKU_DOCKER_TAG}
       dockerfile: ${TEKU_DOCKERFILE}
     image: teku:local
-    user: root
+    user: teku
     stop_grace_period: 1m
     volumes:
       - tekuconsensus-data:/var/lib/teku
@@ -33,7 +33,6 @@ services:
           - eth2
     <<: *logging
     entrypoint:
-      - docker-entrypoint.sh
       - /opt/teku/bin/teku
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
