--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -23,13 +23,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
-RUN set -eux; \
-	apt-get update; \
-        apt-get install -y gosu ca-certificates; \
-        rm -rf /var/lib/apt/lists/*; \
-# verify that the binary works
-        gosu nobody true
-
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
     --disabled-password \
@@ -44,6 +37,7 @@ RUN mkdir -p /var/lib/besu && chown -R ${USER}:${USER} /var/lib/besu && chmod -R
 
 # Copy executable
 COPY --from=builder /usr/src/besu/build/install/besu/. /opt/besu/
-COPY ./docker-entrypoint.sh /usr/local/bin/
 
-ENTRYPOINT ["docker-entrypoint.sh","/opt/besu/bin/besu"]
+USER ${USER}
+
+ENTRYPOINT ["/opt/besu/bin/besu"]
