--- a/lighthouse/Dockerfile.binary
+++ b/lighthouse/Dockerfile.binary
@@ -47,9 +47,10 @@ RUN set -eux; \
 # Scripts that handle permissions
 COPY ./validator-import.sh /usr/local/bin/
 COPY ./validator-exit.sh /usr/local/bin/
-COPY ./docker-entrypoint.sh /usr/local/bin/
 
 # For voluntary exit
 ENV KEYSTORE=nonesuch
 
-ENTRYPOINT ["docker-entrypoint.sh","lighthouse"]
+USER lhconsensus
+
+ENTRYPOINT ["lighthouse"]
