--- a/nethermind/Dockerfile.source
+++ b/nethermind/Dockerfile.source
@@ -13,13 +13,7 @@ RUN bash -c "git clone https://github.com/NethermindEth/nethermind && cd netherm
 
 FROM mcr.microsoft.com/dotnet/aspnet:5.0
 
-RUN apt-get update && apt-get -y install libsnappy-dev libc6-dev libc6 ca-certificates
-RUN set -eux; \
-	apt-get update; \
-        apt-get install -y gosu; \
-        rm -rf /var/lib/apt/lists/*; \
-# verify that the binary works
-        gosu nobody true
+RUN apt-get update && apt-get -y install libsnappy-dev libc6-dev libc6 ca-certificates && rm -rf /var/lib/apt/lists/*
 
 ARG USER=nethermind
 ARG UID=10001
@@ -39,6 +33,6 @@ COPY --from=build /nethermind/out .
 RUN chown -R ${USER}:${USER} /nethermind
 RUN mkdir -p /var/lib/nethermind && chown ${USER}:${USER} /var/lib/nethermind
 
-COPY ./docker-entrypoint.sh /usr/local/bin/
+USER ${USER}
 
-ENTRYPOINT ["docker-entrypoint.sh","./Nethermind.Runner"]
+ENTRYPOINT ["./Nethermind.Runner"]
