--- a/nimbus/Dockerfile.binary
+++ b/nimbus/Dockerfile.binary
@@ -25,7 +25,8 @@ RUN mkdir -p /var/lib/nimbus && chown -R user:user /var/lib/nimbus && chmod 700 
 # Copy beacon_node into $PATH
 RUN cp /home/user/nimbus-eth2/build/nimbus_beacon_node /usr/local/bin/nimbus_beacon_node
 # Scripts for privilege change and validator import
-COPY ./docker-entrypoint.sh /usr/local/bin/
 COPY ./validator-import.sh /usr/local/bin/
 
-ENTRYPOINT ["docker-entrypoint.sh","nimbus_beacon_node"]
+USER ${USER}
+
+ENTRYPOINT ["nimbus_beacon_node"]
