--- a/nimbus/Dockerfile.source
+++ b/nimbus/Dockerfile.source
@@ -46,7 +46,8 @@ RUN mkdir -p /var/lib/nimbus && chown ${USER}:${USER} /var/lib/nimbus && chmod 7
 # Copy executable
 COPY --from=builder /usr/src/nim-beacon-chain/build/nimbus_beacon_node /usr/local/bin/nimbus_beacon_node
 # Scripts for privilege change and validator import
-COPY ./docker-entrypoint.sh /usr/local/bin/
 COPY ./validator-import.sh /usr/local/bin/
 
-ENTRYPOINT ["docker-entrypoint.sh","nimbus_beacon_node"]
+USER ${USER}
+
+ENTRYPOINT ["nimbus_beacon_node"]
