--- a/teku-base-notz.yml
+++ b/teku-base-notz.yml
@@ -17,6 +17,7 @@ services:
         - DOCKER_TAG=${TEKU_DOCKER_TAG}
       dockerfile: ${TEKU_DOCKERFILE}
     image: teku:local
+    user: teku
     stop_grace_period: 1m
     volumes:
       - teku-data:/var/lib/teku
@@ -31,7 +32,6 @@ services:
           - eth2
     <<: *logging
     entrypoint:
-      - docker-entrypoint.sh
       - /opt/teku/bin/teku
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
@@ -50,6 +50,7 @@ services:
   validator-import:
     restart: "no"
     image: teku:local
+    user: root
     volumes:
       - teku-data:/var/lib/teku
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
