--- a/teku-validator-notz.yml
+++ b/teku-validator-notz.yml
@@ -17,11 +17,11 @@ services:
         - DOCKER_TAG=${TEKU_DOCKER_TAG}
       dockerfile: ${TEKU_DOCKERFILE}
     image: teku:local
+    user: teku
     volumes:
       - teku-data:/var/lib/teku
     <<: *logging
     entrypoint:
-      - docker-entrypoint.sh
       - /opt/teku/bin/teku
       - validator-client
       - --beacon-node-api-endpoint=${CC_NODE}
@@ -34,6 +34,7 @@ services:
   validator-import:
     restart: "no"
     image: teku:local
+    user: root
     volumes:
       - teku-data:/var/lib/teku
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
