--- a/nimbus-consensus.yml
+++ b/nimbus-consensus.yml
@@ -42,8 +42,8 @@ services:
       - --web3-url=${EC_FALLBACK_NODE1}
       - --web3-url=${EC_FALLBACK_NODE2}
       - --log-level=${LOG_LEVEL}
-      - --rpc
-      - --rpc-address=0.0.0.0
+      - --rest
+      - --rest-address=0.0.0.0
       - --subscribe-all-subnets
       - --enr-auto-update=true
     labels:
