Fix Nimbus Dockerfile

--- a/nimbus/Dockerfile.binary
+++ b/nimbus/Dockerfile.binary
@@ -27,6 +27,6 @@ RUN cp /home/user/nimbus-eth2/build/nimbus_beacon_node /usr/local/bin/nimbus_bea
 # Scripts for privilege change and validator import
 COPY ./validator-import.sh /usr/local/bin/
 
-USER ${USER}
+USER user
 
 ENTRYPOINT ["nimbus_beacon_node"]
